tests/fail/RightBitShift.java
package fail;

import java.lang.System;

public class RightBitShift {

  public static void main(String[] args ) {
    23 >> "hello";
  }

}
